# mhd-framework

./: CMakeLists.txt  README.md  generate-model.sh  run.sh  server.cpp  settings.hpp
Controllers/: ClientController.hpp  HelloController.hpp  UserController.hpp
Models/: client.hpp  session.hpp  user.hpp  user_profile.hpp  userprofile.hpp
Models/Migration/: migrations.hpp  run-migrations.hpp
database/: db.sqlite
router/: routes.cpp  routes.hpp
templates/: documentation-v1.0.html  documentation-v1.1.html  documentation.html  hello.html  parse.html
templates/clients/: create.html  details.html  edit.html  list.html
templates/mail/: hello.html  thankyou.html
templates/static/css/: client-styles.css  documentation.css  hello.css
templates/static/js/: main.js
templates/user/: home.html  login.html  register.html
urls/: urls.hpp
utils/: URLPattern.hpp  current_path.hpp  functions.hpp  get_itmes.hpp  hash_password.hpp
utils/Exception/: exception.hpp
utils/ORM/: orm.hpp
utils/ORM/SQLiteORM/: sqliteorm.cpp  sqliteorm.hpp
utils/ORM/dependency_graph/: dependency_graph.hpp
utils/crypto/: sha256.cpp  sha256.hpp  use_monocypher.cpp  use_monocypher.hpp
utils/current_path/: current_path.cpp  current_path.hpp
utils/datetime/: mhd-date-time.cpp  mhd-date-time.hpp
utils/file/: file.cpp  file.hpp
utils/filter/: filters.hpp
utils/load_env/: load_env.cpp  load_env.hpp
utils/mail/: send_mail.cpp  send_mail.hpp
utils/nice-display/: display.cpp  display.hpp  mhd++.txt
utils/render/: HttpRender.cpp  HttpRender.hpp
utils/request/: Request.cpp  Request.hpp
utils/route/: routes.cpp  routes.hpp
utils/session/: session.cpp  session.hpp
